[package]
name = "wikibranch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
tl = "0.7.7"
